fix (openapi): latitude & longitude
