# backend/app/Domain/Mahasiswa/Actions/ReadMahasiswaAction.php
@@ -2,6 +2,8 @@
 
 namespace Domain\Mahasiswa\Actions;
 
+use Domain\Shared\Models\User;
+use Illuminate\Http\JsonResponse;
 use Lorisleiva\Actions\Concerns\AsAction;
 
 class ReadMahasiswaAction
@@ -10,6 +12,23 @@ class ReadMahasiswaAction
 
     public function handle()
     {
-        //
+        return User::select(
+            "user.id",
+            "user.nama",
+            "nim",
+            "foto_profile",
+            "tanggal_lahir",
+            "no_telepon",
+            "list_kesukaan",
+            "alamat",
+        )->get();
+    }
+    public function asController(): JsonResponse
+    {
+        return response()->json([
+            'success' => [
+                'data' => $this->handle()
+            ]
+        ])->setStatusCode(200);
     }
 }
